--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -27,7 +27,7 @@
         </button>
     </mat-toolbar>
 
-    <div class="container">
+    <div class="container p-3">
         <router-outlet></router-outlet>
     </div>
 </mat-sidenav-container>
